--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,10 +39,9 @@
                 <button type="submit" class="btn btn-default">提交</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=4e530f0e13a1e5ccaa89&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
-                <li class="dropdown">
+                <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">我 <span class="caret"></span></a>
+                       aria-expanded="false" th:text="${session.user.getName()}">hello<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -51,6 +50,7 @@
                         <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
+                <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=4e530f0e13a1e5ccaa89&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
