--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -42,7 +42,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName()}">hello<span class="caret"></span></a>
+                       aria-expanded="false" th:text="'欢迎您:'+${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -63,7 +63,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr/>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题:</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
@@ -76,6 +76,7 @@
                     <label for="title">添加标签:</label>
                     <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以,分隔">
                 </div>
+                <div th:if="${error}==0"><span class="alert alert-danger" th:text="${error}"></span></div>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
             </form>
         </div>
