--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -66,17 +66,17 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题:</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="问题标题...">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题...">
                 </div>
                 <div class="form-group">
                     <label for="title">问题补充:</label>
-                    <textarea name="description" id="description" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" class="form-control" th:text="${description}" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="title">添加标签:</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以,分隔">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签，以,分隔">
                 </div>
-                <div th:if="${error}==0"><span class="alert alert-danger" th:text="${error}"></span></div>
+                <span class="alert alert-danger" th:if="${error != null}" th:text="${error}" ></span>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
             </form>
         </div>
